--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,2 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=database
+spring.data.mongodb.database=Database
+spring.data.mongodb.host=mongodb+srv://mohsin6166:<password>@cluster0.n60dv.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
