--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.data.mongodb.database=Database
-spring.data.mongodb.host=mongodb+srv://mohsin6166:Mohsin12345@cluster0.n60dv.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+spring.data.mongodb.host=mongodb+srv://mohsin6166:Mohsin12345@cluster0.n60dv.mongodb.net/Database?retryWrites=true&w=majority
