--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=database
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=database
+
+#spring.data.mongodb.database=Database
+spring.data.mongodb.uri=mongodb+srv://mohsin6166:Mohsin12345@cluster0.n60dv.mongodb.net/Database?retryWrites=true&w=majority
+
+#
